# midas-contracts

./: .gitignore  Cargo.toml  Makefile
masm/: constants.masm
masm/accounts/: counter.masm
masm/scripts/: counter_script.masm
src/: main.rs
tests/: main.rs  pow_test.rs  sqrt_test.rs
