[package]
name = "midas-contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { version = "0.9.0", features = ["testing", "concurrent", "tonic", "sqlite"] }
miden-lib = { version = "0.9", default-features = false }
miden-objects = { version = "0.9", default-features = false }
miden-crypto = { version = "0.14.1", features = ["executable"] }
miden-assembly = "0.14.0"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros"] }
rand_chacha = "0.9.0"
miden-client-tools = "0.2.0"

